--- a/appinfo.json
+++ b/appinfo.json
@@ -5,7 +5,7 @@
     "companyName": "JR Mobley",
     "versionLabel": "1.1",
     "sdkVersion": "3",
-    "targetPlatforms": ["aplite", "basalt"],
+    "targetPlatforms": ["aplite", "basalt", "chalk"],
     "capabilities": ["configurable"],
     "watchapp": {
         "watchface": false
