Added AppGlance support.

--- a/package.json
+++ b/package.json
@@ -1,46 +1,53 @@
 {
-  "version": "1.3.0",
-  "author": "JR Mobley",
-  "private": true,
-  "dependencies": {
-    "pebble-clay": "^1.0.2"
-  },
-  "keywords": [
-    "pebble-app"
-  ],
-  "pebble": {
-    "sdkVersion": "3",
-    "resources": {
-      "media": []
+    "version": "1.3.0",
+    "author": "JR Mobley",
+    "private": true,
+    "dependencies": {
+        "pebble-clay": "^1.0.2"
     },
-    "projectType": "native",
-    "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
-    "messageKeys": [
-      "PUBLIC_API_KEY",
-      "USERNAME",
-      "REVIEWS_AVAILABLE_NEXT_HOUR",
-      "LESSONS_AVAILABLE",
-      "SCHEDULE",
-      "REVIEWS_AVAILABLE_NEXT_DAY",
-      "NEXT_REVIEW_DATE",
-      "REVIEWS_AVAILABLE",
-      "ERROR"
+    "keywords": [
+        "pebble-app"
     ],
-    "enableMultiJS": true,
-    "displayName": "TabiTabi",
-    "watchapp": {
-      "onlyShownOnCommunication": false,
-      "hiddenApp": false,
-      "watchface": false
+    "pebble": {
+        "sdkVersion": "3",
+        "resources": {
+            "media": [
+                {
+                    "type": "png",
+                    "name": "GLANCE_ICON",
+                    "file": "glance.png"
+                }
+            ]
+        },
+        "projectType": "native",
+        "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
+        "messageKeys": [
+            "PUBLIC_API_KEY",
+            "USERNAME",
+            "REVIEWS_AVAILABLE_NEXT_HOUR",
+            "LESSONS_AVAILABLE",
+            "SCHEDULE",
+            "REVIEWS_AVAILABLE_NEXT_DAY",
+            "NEXT_REVIEW_DATE",
+            "REVIEWS_AVAILABLE",
+            "ERROR"
+        ],
+        "enableMultiJS": true,
+        "displayName": "TabiTabi",
+        "watchapp": {
+            "onlyShownOnCommunication": false,
+            "hiddenApp": false,
+            "watchface": false
+        },
+        "targetPlatforms": [
+            "aplite",
+            "basalt",
+            "chalk",
+            "diorite"
+        ],
+        "capabilities": [
+            "configurable"
+        ]
     },
-    "targetPlatforms": [
-      "aplite",
-      "basalt",
-      "chalk"
-    ],
-    "capabilities": [
-      "configurable"
-    ]
-  },
-  "name": "TabiTabi"
+    "name": "TabiTabi"
 }
