--- a/package.json
+++ b/package.json
@@ -1,53 +1,72 @@
 {
-    "version": "1.3.0",
-    "author": "JR Mobley",
-    "private": true,
-    "dependencies": {
-        "pebble-clay": "^1.0.2"
+  "version": "2.0.0",
+  "author": "JR Mobley",
+  "private": true,
+  "dependencies": {
+    "pebble-clay": "^1.0.2",
+    "pebble-events": "^1.1.0",
+    "underscore": "^1.8.3"
+  },
+  "keywords": [
+    "pebble-app"
+  ],
+  "pebble": {
+    "sdkVersion": "3",
+    "resources": {
+      "media": [
+        {
+          "type": "png",
+          "name": "ICON_TINY",
+          "file": "icon25.png",
+          "menuIcon": true
+        },
+        {
+          "type": "png",
+          "name": "ICON_SMALL",
+          "file": "icon50.png"
+        },
+        {
+          "type": "png",
+          "name": "ICON_LARGE",
+          "file": "icon80.png"
+        }
+      ],
+      "publishedMedia": [
+        {
+          "name": "ICON",
+          "id": 1,
+          "glance": "ICON_TINY",
+          "timeline": {
+            "tiny": "ICON_TINY",
+            "small": "ICON_SMALL",
+            "large": "ICON_LARGE"
+          }
+        }
+      ]
     },
-    "keywords": [
-        "pebble-app"
+    "projectType": "native",
+    "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
+    "messageKeys": [
+      "PUBLIC_API_KEY",
+      "SUCCESS",
+      "ERROR"
     ],
-    "pebble": {
-        "sdkVersion": "3",
-        "resources": {
-            "media": [
-                {
-                    "type": "png",
-                    "name": "GLANCE_ICON",
-                    "file": "glance.png"
-                }
-            ]
-        },
-        "projectType": "native",
-        "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
-        "messageKeys": [
-            "PUBLIC_API_KEY",
-            "USERNAME",
-            "REVIEWS_AVAILABLE_NEXT_HOUR",
-            "LESSONS_AVAILABLE",
-            "SCHEDULE",
-            "REVIEWS_AVAILABLE_NEXT_DAY",
-            "NEXT_REVIEW_DATE",
-            "REVIEWS_AVAILABLE",
-            "ERROR"
-        ],
-        "enableMultiJS": true,
-        "displayName": "TabiTabi",
-        "watchapp": {
-            "onlyShownOnCommunication": false,
-            "hiddenApp": false,
-            "watchface": false
-        },
-        "targetPlatforms": [
-            "aplite",
-            "basalt",
-            "chalk",
-            "diorite"
-        ],
-        "capabilities": [
-            "configurable"
-        ]
+    "enableMultiJS": true,
+    "displayName": "TabiTabi",
+    "watchapp": {
+      "onlyShownOnCommunication": false,
+      "hiddenApp": false,
+      "watchface": false
     },
-    "name": "TabiTabi"
+    "targetPlatforms": [
+      "aplite",
+      "basalt",
+      "chalk",
+      "diorite"
+    ],
+    "capabilities": [
+      "configurable"
+    ]
+  },
+  "name": "TabiTabi"
 }
