--- a/package.json
+++ b/package.json
@@ -1,73 +1,76 @@
 {
-  "version": "2.0.0",
-  "author": "JR Mobley",
-  "private": true,
-  "dependencies": {
-    "pebble-clay": "^1.0.2",
-    "pebble-events": "^1.1.0",
-    "underscore": "^1.8.3"
-  },
-  "keywords": [
-    "pebble-app"
-  ],
-  "pebble": {
-    "sdkVersion": "3",
-    "resources": {
-      "media": [
-        {
-          "type": "png",
-          "name": "ICON_TINY",
-          "file": "icon25.png",
-          "menuIcon": true
-        },
-        {
-          "type": "png",
-          "name": "ICON_SMALL",
-          "file": "icon50.png"
-        },
-        {
-          "type": "png",
-          "name": "ICON_LARGE",
-          "file": "icon80.png"
-        }
-      ],
-      "publishedMedia": [
-        {
-          "name": "ICON",
-          "id": 1,
-          "glance": "ICON_TINY",
-          "timeline": {
-            "tiny": "ICON_TINY",
-            "small": "ICON_SMALL",
-            "large": "ICON_LARGE"
-          }
-        }
-      ]
+    "name": "TabiTabi",
+    "version": "2.0.0",
+    "author": "JR Mobley",
+    "private": true,
+    "dependencies": {
+        "pebble-app-ready-service": "../pebble-app-ready-service",
+        "pebble-clay": "^1.0.2",
+        "pebble-events": "^1.1.0",
+        "underscore": "^1.8.3"
     },
-    "projectType": "native",
-    "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
-    "messageKeys": [
-      "PUBLIC_API_KEY",
-      "PROGRESS",
-      "SUCCESS",
-      "ERROR"
+    "keywords": [
+        "pebble-app"
     ],
-    "enableMultiJS": true,
-    "displayName": "TabiTabi",
-    "watchapp": {
-      "onlyShownOnCommunication": false,
-      "hiddenApp": false,
-      "watchface": false
-    },
-    "targetPlatforms": [
-      "aplite",
-      "basalt",
-      "chalk",
-      "diorite"
-    ],
-    "capabilities": [
-      "configurable"
-    ]
-  },
-  "name": "TabiTabi"
+    "pebble": {
+        "displayName": "TabiTabi",
+        "projectType": "native",
+        "uuid": "ce694583-c51a-4567-8376-d4758daca3d8",
+        "messageKeys": [
+            "PUBLIC_API_KEY",
+            "REFRESH",
+            "CONFIGURE",
+            "PROGRESS",
+            "SUCCESS",
+            "ERROR"
+        ],
+        "sdkVersion": "3",
+        "enableMultiJS": true,
+        "watchapp": {
+            "onlyShownOnCommunication": false,
+            "hiddenApp": false,
+            "watchface": false
+        },
+        "targetPlatforms": [
+            "aplite",
+            "basalt",
+            "chalk",
+            "diorite"
+        ],
+        "capabilities": [
+            "configurable"
+        ],
+        "resources": {
+            "media": [
+                {
+                    "type": "png",
+                    "name": "ICON_TINY",
+                    "file": "icon25.png",
+                    "menuIcon": true
+                },
+                {
+                    "type": "png",
+                    "name": "ICON_SMALL",
+                    "file": "icon50.png"
+                },
+                {
+                    "type": "png",
+                    "name": "ICON_LARGE",
+                    "file": "icon80.png"
+                }
+            ],
+            "publishedMedia": [
+                {
+                    "name": "ICON",
+                    "id": 1,
+                    "glance": "ICON_TINY",
+                    "timeline": {
+                        "tiny": "ICON_TINY",
+                        "small": "ICON_SMALL",
+                        "large": "ICON_LARGE"
+                    }
+                }
+            ]
+        }
+    }
 }
