--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 # Ignore build generated files
 build
 .Rproj.user
-.lock-waf_darwin_build
+.lock-waf*
 
 node_modules/
-marketing/exports
+marketing/exports/
+kojak/
